# finance-chat

./: .gitignore  README.md  TASK.md  package-lock.json
backend/: main.py  pyproject.toml  requirements.txt
backend/migrations/: 2024-05-30_add_unit_cost_to_stocks.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AssistantBall.css  AssistantBall.jsx  AssistantChatPopup.css  AssistantChatPopup.jsx  CsvImportModal.jsx  ThemeToggleBall.css  ThemeToggleBall.jsx
