[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "finnhub-python>=2.4.23",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn[standard]>=0.34.3",
]
